--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -11,6 +11,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: mkdir
       run: mkdir build && cd build
+    - name: ls
+      run: ls  
     - name: cmake
       run: cmake ..
     - name: make
