--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -10,9 +10,11 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: mkdir
-      run: mkdir build && cd build
+      run: mkdir build
+    - name: cd
+      run: cd build  
     - name: ls
-      run: ls  
+      run: ls
     - name: cmake
       run: cmake ..
     - name: make
