--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -9,6 +9,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
+    - name: boost
+      run: sudo apt install libboost-dev
     - name: cmake
       run: cmake .
     - name: make
