--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,8 @@ set(SOURCES
         src/CHDijkstra.cpp
         src/HubLabels.cpp
         src/GraphStats.cpp
-        src/PathFinderBase.cpp)
+        src/PathFinderBase.cpp
+        src/ChHlBenchmarker.cpp)
 
 set(INCLUDES
         include/CHDijkstra.h
@@ -27,14 +28,17 @@ set(INCLUDES
         include/GraphReader.h
         include/GraphStats.h
         include/HubLabels.h
-        include/PathFinderBase.h)
+        include/PathFinderBase.h
+        include/ChHlBenchmarker.h)
 
 find_package(Boost REQUIRED COMPONENTS system iostreams)
 
 include_directories(${Boost_INCLUDE_DIRS} )
 include_directories(${STXXL_INCLUDE_DIRS})
+include_directories(INCLUDES)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${STXXL_CXX_FLAGS}")
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
+
 target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} ${STXXL_LIBRARIES})
 set(CMAKE_CXX_FLAGS "-pthread")
 set(CMAKE_CXX_FLAGS "-fPIC")
