--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 [submodule "vendor/googletest"]
 	path = vendor/googletest
 	url = ../../google/googletest.git
+[submodule "vendor/json"]
+	path = vendor/nlohmann_json
+	url = https://github.com/nlohmann/json.git
