--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -12,7 +12,7 @@ jobs:
     - name: checkout submodules
       run:  git submodule update --init --recursive
     - name: boost
-      run: sudo apt-get install libboost-all-dev
+      run: sudo apt-get update && sudo apt-get install libboost-all-dev
     - name: cmake
       run: cmake .
     - name: make
