change code to proper <> library includes
change code to proper <> library includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,8 @@
 cmake_minimum_required(VERSION 3.12)
 
-set(PROJECT_NAME path_finder)
-project(${PROJECT_NAME})
+project(path_finder)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
 if( NOT CMAKE_BUILD_TYPE )
     set( CMAKE_BUILD_TYPE Release)
 endif()
@@ -27,38 +26,35 @@ set(SOURCES
         src/DataConfig.cpp
         src/VectorBase.cpp
         src/RamVector.cpp
-        src/Grid.cpp)
+        src/Grid.cpp
+        src/OscarIntegration.cpp)
 
 set(INCLUDES
-        include/CHDijkstra.h
-        include/CHGraph.h
-        include/Dijkstra.h
-        include/Graph.h
-        include/GraphReader.h
-        include/GraphStats.h
-        include/HubLabels.h
-        include/PathFinderBase.h
-        include/ChHlBenchmarker.h
-        include/HubLabelStore.h
-        include/MmapVector.h
-        include/Static.h
-        include/Stopwatch.h
-        include/Timer.h
-        include/DataConfig.h
-        include/Grid.h)
+        include/path_finder/CHDijkstra.h
+        include/path_finder/CHGraph.h
+        include/path_finder/Dijkstra.h
+        include/path_finder/Graph.h
+        include/path_finder/GraphReader.h
+        include/path_finder/GraphStats.h
+        include/path_finder/HubLabels.h
+        include/path_finder/PathFinderBase.h
+        include/path_finder/ChHlBenchmarker.h
+        include/path_finder/HubLabelStore.h
+        include/path_finder/MmapVector.h
+        include/path_finder/Static.h
+        include/path_finder/Stopwatch.h
+        include/path_finder/Timer.h
+        include/path_finder/DataConfig.h
+        include/path_finder/Grid.h)
 
 find_package(Boost REQUIRED COMPONENTS system iostreams)
 find_package(OpenMP)
 
-include_directories(${Boost_INCLUDE_DIRS} )
-include_directories(${STXXL_INCLUDE_DIRS})
-include_directories(INCLUDES)
+include_directories(${Boost_INCLUDE_DIRS})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${STXXL_CXX_FLAGS}")
-add_library(${PROJECT_NAME} STATIC ${SOURCES})
 
 set(JSON_BuildTests OFF CACHE INTERNAL "")
 add_subdirectory(vendor/nlohmann_json)
-
 
 option(PACKAGE_TESTS "Build the tests" ON)
 if(PACKAGE_TESTS)
@@ -67,6 +63,8 @@ if(PACKAGE_TESTS)
     add_subdirectory(tests)
 endif()
 
-target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} ${STXXL_LIBRARIES} OpenMP::OpenMP_CXX nlohmann_json::nlohmann_json)
+add_library(${PROJECT_NAME} ${SOURCES})
+target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} OpenMP::OpenMP_CXX nlohmann_json::nlohmann_json)
+target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
 set(CMAKE_CXX_FLAGS "-pthread")
 set(CMAKE_CXX_FLAGS "-fPIC")
