add distance test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,8 +14,8 @@ macro(package_add_test TESTNAME)
     target_link_libraries(${TESTNAME} gtest gmock gtest_main ${Boost_LIBRARIES} nlohmann_json::nlohmann_json path_finder)
     gtest_discover_tests(${TESTNAME}
             # set a working directory so your project root so that you can find test data via paths relative to the project root
-            WORKING_DIRECTORY ${PROJECT_DIR}
-            PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_DIR}"
+            WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
+            PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
             )
     set_target_properties(${TESTNAME} PROPERTIES FOLDER tests)
 endmacro()
@@ -23,3 +23,4 @@ endmacro()
 
 package_add_test(HubLabelStore HubLabelStore.cpp)
 package_add_test(HubLabels HubLabels.cpp)
+package_add_test(RoutingTest routing_tests.cpp)
