add cell id store test and fix cell id store bug

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -24,3 +24,4 @@ endmacro()
 package_add_test(HubLabelStore HubLabelStore.cpp)
 package_add_test(HubLabels HubLabels.cpp)
 package_add_test(RoutingTest routing_tests.cpp)
+package_add_test(CellTest cell_tests.cpp)
