tidy up include with folder structure

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -25,3 +25,4 @@ package_add_test(HubLabelStore HubLabelStore.cpp)
 package_add_test(HubLabels HubLabels.cpp)
 package_add_test(RoutingTest routing_tests.cpp)
 package_add_test(CellTest cell_tests.cpp)
+package_add_test(GraphReadTests graph_read_tests.cpp)
