--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "vendor/liboscar"]
 	path = vendor/liboscar
 	url = https://github.com/dbahrdt/liboscar.git
+[submodule "vendor/tbb"]
+	path = vendor/tbb
+	url = https://github.com/wjakob/tbb.git
