major refactoring and reformating

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,8 @@ set(SOURCES
         src/base64.cpp
         src/FileWriter.cpp
         src/Benchmarker.cpp
-        src/ThreadPool.cpp include/path_finder/helper/Math.h include/path_finder/graphs/GeometricType.h src/GeometricTypes.cpp)
+        src/ThreadPool.cpp
+        src/GeometricTypes.cpp)
 
 set(INCLUDES
         include/path_finder/routing/CHDijkstra.h
@@ -48,12 +49,12 @@ set(INCLUDES
         include/path_finder/storage/MmapVector.h
         include/path_finder/helper/Static.h
         include/path_finder/helper/Stopwatch.h
-        include/path_finder/helper/Timer.h
         include/path_finder/storage/DataConfig.h
         include/path_finder/graphs/Grid.h
         include/path_finder/storage/FileLoader.h
         include/path_finder/storage/FileWriter.h
         include/path_finder/helper/ThreadPool.h
+        include/path_finder/graphs/GeometricType.h
         include/path_finder/helper/Types.h)
 
 find_package(Boost REQUIRED COMPONENTS system)
